--- a/frontend/non members/contact-support.html
+++ b/frontend/non members/contact-support.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Support</title>
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
+    <!-- Updated stylesheet link (served from root) -->
+    <link rel="stylesheet" href="/css/styles.css" />
     <!-- Merged CSS for header, contact support body, and footer -->
     <style>
       /* ========== RESET & GLOBAL ========== */
@@ -80,7 +81,7 @@
         min-width: 160px;
         border-radius: 8px;
         margin-top: 0.5rem;
-        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         padding: 0.75rem 0;
         transform: translateY(-10px);
         transition: opacity 0.2s ease, transform 0.2s ease;
@@ -281,33 +282,30 @@
     <!-- HEADER -->
     <nav class="navbar">
       <div class="nav-header">
-        <img src="/frontend/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
+        <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
       <div class="nav-links">
         <ul>
-          <li><a href="/frontend/index.html">About</a></li>
+          <li><a href="/index.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
-              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
-              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
-              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
-              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
+              <li><a href="/non members/community-membership.html">Community</a></li>
+              <li><a href="/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/non members/creative-workspace-membership.html">Creative Workspace</a></li>
+              <li><a href="/non members/non-member-page.html">Compare all Memberships</a></li>
             </ul>
           </li>
-          <li><a href="/frontend/non members/events.html">Events</a></li>
-          <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
+          <li><a href="/non members/events.html">Events</a></li>
+          <li><a href="/non members/contact-support.html">Contact Us</a></li>
         </ul>
       </div>
       <div class="usr-panel">
-        <!-- The "Join Now" button links to registration.html with tab=signup -->
-        <button class="signup-btn" onclick="location.href='/frontend/non members/registration.html?tab=signup'">Join Now</button>
-        <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
-        <!-- The user icon links to registration.html with tab=login -->
-        <a href="/frontend/non members/registration.html?tab=login">
-          <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
+        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
+        <a href="/non members/registration.html?tab=login">
+          <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
         </a>
-      </div>            
       </div>
     </nav>
 
@@ -353,25 +351,26 @@
       </div>
     </main>
 
-<!-- ========== FOOTER ========== -->
-<footer>
-  <div class="f-format">
-    <div class="authors">
-      <h4>Authors:</h4>
-      <p>Tai Rose (SID: 2108618)</p>
-      <p>Malcom Going (SID: 2372291)</p>
-      <p>Alessandro La Mendola (SID: 2158059)</p>
-      <p>Yusuf Kose (SID: 2415327)</p>
-    </div>
-  </div>
-</footer>
+    <!-- FOOTER -->
+    <footer>
+      <div class="f-format">
+        <div class="authors">
+          <h4>Authors:</h4>
+          <p>Tai Rose (SID: 2108618)</p>
+          <p>Malcom Going (SID: 2372291)</p>
+          <p>Alessandro La Mendola (SID: 2158059)</p>
+          <p>Yusuf Kose (SID: 2415327)</p>
+        </div>
+      </div>
+    </footer>
 
     <!-- JavaScript for form submission handling -->
     <script>
       document.getElementById("contactForm").addEventListener("submit", function(event) {
         event.preventDefault();
         alert("Your support request has been submitted!");
-        window.location.href = "/frontend/index.html"; // Change this URL as needed
+        // Redirect after submission (adjust this URL as needed)
+        window.location.href = "/index.html";
       });
     </script>
   </body>
