--- a/frontend/non members/community-membership.html
+++ b/frontend/non members/community-membership.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Community Membership</title>
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
+    <!-- Link to global CSS file served from root -->
+    <link rel="stylesheet" href="/css/styles.css" />
     <style>
       /* ========== RESET & GLOBAL ========== */
       * {
@@ -81,7 +82,7 @@
         min-width: 160px;
         border-radius: 8px;
         margin-top: 0.5rem;
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         padding: 0.75rem 0;
         transform: translateY(-10px);
         transition: opacity 0.2s ease, transform 0.2s ease;
@@ -291,61 +292,59 @@
     <!-- HEADER -->
     <nav class="navbar">
       <div class="nav-header">
-        <img
-          src="/frontend/images/TC_Logos-01.png"
-          alt="Together Culture Cambridge Logo"
-        />
+        <!-- Updated image path -->
+        <img src="/images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
       </div>
       <div class="nav-links">
         <ul>
-          <!-- CHANGED 'Home' to 'About' -->
-          <li><a href="/frontend/non members/about.html">About</a></li>
+          <!-- Updated navigation links -->
+          <li><a href="/index.html">About</a></li>
           <li class="dropdown">
             <a href="#">Memberships</a>
             <ul class="dropdown-menu">
-              <li><a href="/frontend/non members/community-membership.html">Community</a></li>
-              <li><a href="/frontend/non members/key-access-membership.html">Key Access</a></li>
-              <li><a href="/frontend/non members/creative-workspace-membership.html">Creative Workspace</a></li>
-              <li><a href="/frontend/non members/non-member-page.html">Compare all Memberships</a></li>
+              <li><a href="/non members/community-membership.html">Community</a></li>
+              <li><a href="/non members/key-access-membership.html">Key Access</a></li>
+              <li><a href="/non members/creative-workspace-membership.html">Creative Workspace</a></li>
+              <li><a href="/non members/non-member-page.html">Compare all Memberships</a></li>
             </ul>
           </li>
-          <li><a href="/frontend/non members/events.html">Events</a></li>
-          <li><a href="/frontend/non members/contact-support.html">Contact Us</a></li>
+          <li><a href="/non members/events.html">Events</a></li>
+          <li><a href="/non members/contact-support.html">Contact Us</a></li>
         </ul>
       </div>
-        <div class="usr-panel">
-          <!-- The "Join Now" button links to registration.html with tab=signup -->
-          <button class="signup-btn" onclick="location.href='/frontend/non members/registration.html?tab=signup'">Join Now</button>
-          <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag" />
-          <!-- The user icon links to registration.html with tab=login -->
-          <a href="/frontend/non members/registration.html?tab=login">
-            <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon" />
-          </a>
-        </div>
+      <div class="usr-panel">
+        <!-- Updated registration links -->
+        <button class="signup-btn" onclick="location.href='/non members/registration.html?tab=signup'">Join Now</button>
+        <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" />
+        <a href="/non members/registration.html?tab=login">
+          <img src="/images/GuestIcon.svg" alt="guest-profile-icon" />
+        </a>
       </div>
     </nav>
 
-    <!-- MAIN CONTENT: COMMUNITY MEMBERSHIP -->
+    <!-- MAIN CONTENT: CREATIVE WORKSPACE MEMBERSHIP -->
     <main class="membership-main">
       <section class="membership-section">
         <div class="membership-layout">
           <!-- LEFT: Info -->
           <div class="membership-info">
             <h1>
-              <span class="red-text">Community</span>
+              <span class="red-text">Creative Workspace</span>
               <span class="black-text">Membership</span>
             </h1>
-            <p class="subtitle">TOGETHER CULTURE<br />CAMBRIDGE</p>
+            <p class="subtitle">Together Culture<br />CAMBRIDGE</p>
           </div>
           <!-- CENTER: Red Card -->
           <div class="membership-card">
-            <div class="membership-header">Community Member</div>
+            <div class="membership-header">
+              Apply to Become a Workspace Member
+            </div>
             <div class="membership-benefits">
               <ul>
                 <li>All of the benefits of Community Membership, plus</li>
                 <li>24/7 Access to 5 Fitzroy Street</li>
                 <li>Inclusive hire for your own events and meetings</li>
-                <li>Access to the Workspace workbench upstairs</li>
+                <li>Your own dedicated workspace and storage</li>
               </ul>
             </div>
           </div>
@@ -353,31 +352,31 @@
           <div class="membership-pricing">
             <div class="price-card">
               <p class="price-title">Monthly Cost</p>
-              <p class="price-amount">£18.50 per month</p>
+              <p class="price-amount">
+                £100 per month<br />
+                + £100 joining fee
+              </p>
             </div>
-            <!-- CTA links to membership application form -->
-            <a
-              href="/frontend/non members/member application.html"
-              class="cta-button"
-            >
-              Join the Community Membership
+            <!-- Updated CTA link -->
+            <a href="/non members/member application.html" class="cta-button">
+              Become a Creative Workspace Member
             </a>
           </div>
         </div>
       </section>
     </main>
 
-<!-- ========== FOOTER ========== -->
-<footer>
-  <div class="f-format">
-    <div class="authors">
-      <h4>Authors:</h4>
-      <p>Tai Rose (SID: 2108618)</p>
-      <p>Malcom Going (SID: 2372291)</p>
-      <p>Alessandro La Mendola (SID: 2158059)</p>
-      <p>Yusuf Kose (SID: 2415327)</p>
-    </div>
-  </div>
-</footer>
+    <!-- FOOTER -->
+    <footer>
+      <div class="f-format">
+        <div class="authors">
+          <h4>Authors:</h4>
+          <p>Tai Rose (SID: 2108618)</p>
+          <p>Malcom Going (SID: 2372291)</p>
+          <p>Alessandro La Mendola (SID: 2158059)</p>
+          <p>Yusuf Kose (SID: 2415327)</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
